test/regress/coverage-item-lookup-h-fallthrough.test
; Coverage for item.cc break in 'h' case of lookup
; When an unknown function starting with 'h' is requested, the break falls through

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format "%(hfoo)\n" -> 1
__ERROR__
While calculating format expression:
  hfoo
While evaluating value expression:
  hfoo
  ^^^^
While handling posting from "$FILE", line 5:
>     Expenses:Food    $10.00
Error: Unknown identifier 'hfoo'
end test
